<resources>
    <string name="app_name">Eventify</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Enter username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="merchendise">Merchendise</string>
    <string name="chats">Chats</string>
    <string name="game">Game</string>
    <string name="profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="codes">Codes</string>
    <string name="logout">Logout</string>

    <string name="date_asc">"Expire date ASC"</string>
    <string name="date_desc">"Expire date DESC"</string>
    <string name="percent_asc">"Percent ASC"</string>
    <string name="percent_desc">"Percent DESC"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>